force-app/main/default/objects/ServiceAttribute__c/ServiceAttribute__c.object-meta.xml
<CustomObject>
    <description>Service Attribute relates one or more Attributes to a Service. Service Attribute is related to Service, Attribute, and Project Service Attribute.</description>
    <label>Service Attribute</label>
    <nameField>
        <displayFormat>SA-{00000000}</displayFormat>
        <label>Service Attribute Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Attributes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>