force-app/main/default/objects/ServiceAttribute__c/fields/Attribute__c.field-meta.xml
<CustomField>
    <fullName>Attribute__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Attribute</label>
    <referenceTo>Attribute__c</referenceTo>
    <relationshipLabel>Service Attributes</relationshipLabel>
    <relationshipName>Service_Attributes</relationshipName>
    <type>Lookup</type>
</CustomField>