force-app/main/default/objects/ServiceAttribute__c/fields/AttributeName__c.field-meta.xml
<CustomField>
    <fullName>AttributeName__c</fullName>
    <formula>Attribute__r.Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attribute Name</label>
    <type>Text</type>
</CustomField>