force-app/main/default/objects/ServiceAttribute__c/fields/AttributeNumber__c.field-meta.xml
<CustomField>
    <fullName>AttributeNumber__c</fullName>
    <formula>Attribute__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attribute Number</label>
    <type>Text</type>
</CustomField>