force-app/main/default/objects/ServiceAttribute__c/fields/AttributeTitle__c.field-meta.xml
<CustomField>
    <fullName>AttributeTitle__c</fullName>
    <formula>Attribute__r.AttributeTitle__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attribute Title</label>
    <type>Text</type>
</CustomField>