force-app/main/default/objects/ServiceAttribute__c/fields/AttributeType__c.field-meta.xml
<CustomField>
    <fullName>AttributeType__c</fullName>
    <formula>TEXT(Attribute__r.AttributeType__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attribute Type</label>
    <type>Text</type>
</CustomField>