force-app/main/default/objects/ServiceAttribute__c/fields/DefaultAttributeValue__c.field-meta.xml
<CustomField>
    <fullName>DefaultAttributeValue__c</fullName>
    <label>Default Attribute Value</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>