force-app/main/default/objects/ServiceAttribute__c/fields/ExcludeFromJobManual__c.field-meta.xml
<CustomField>
    <fullName>ExcludeFromJobManual__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude From Job Manual</label>
    <type>Checkbox</type>
</CustomField>