force-app/main/default/objects/ServiceAttribute__c/fields/IsVisible__c.field-meta.xml
<CustomField>
    <fullName>IsVisible__c</fullName>
    <defaultValue>true</defaultValue>
    <description>To set visibility of an attribute within a Service.</description>
    <label>Is Visible</label>
    <type>Checkbox</type>
</CustomField>